@@ -998,16 +998,10 @@ public class DatanodeManager {
    * @return list of datanodes where decommissioning is in progress.
    */
   public List<DatanodeDescriptor> getDecommissioningNodes() {
-    final List<DatanodeDescriptor> decommissioningNodes =
-        new ArrayList<>();
-    final List<DatanodeDescriptor> results =
-        getDatanodeListForReport(DatanodeReportType.LIVE);
-    for (DatanodeDescriptor node : results) {
-      if (node.isDecommissionInProgress()) {
-        decommissioningNodes.add(node);
-      }
-    }
-    return decommissioningNodes;
+    // There is no need to take namesystem reader lock as
+    // getDatanodeListForReport will synchronize on datanodeMap
+    // A decommissioning DN may be "alive" or "dead".
+    return getDatanodeListForReport(DatanodeReportType.DECOMMISSIONING);
   }
   
   /* Getter and Setter for stale DataNodes related attributes */
